welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:3: error: not found: value temps
  else if (!isSummer && temps>=60 && temp<=90){return true}
                        ^